
syntax = "proto3";

package productdb;

// The greeting service definition.
service ProductDB {
  // Sends a greeting
  rpc getProductOnSale (Empty) returns (Status) {}
  rpc changeSalePrice (productId) returns (Status) {}
  rpc putItemOnSale(itemOnSale) returns (Status2) {}
  rpc removeItemFromSale(itemList) returns (Status) {}
  rpc addProduct(itemList) returns (Status) {}
  rpc searchItem(item) returns (Status) {}
  rpc getProductSeller(itemList) returns (Status) {}
  rpc addFeedback(feedback) returns (Status){}
}
message Empty {}
message feedback {
  string data = 1;
}

message productName {
    string data = 1;
}
message itemList {
    string data = 1;
}
message itemOnSale {
    string itemName = 1;
    string itemDescription = 2;
    string itemPrice = 3;
    string quantity = 4;
    string username = 5;
    repeated string keywords = 6;
}

message item {
    string data = 1;
}

message productId {
    string data = 1;
}

// The request message containing the user's name.
message CustomerDetails {
  string data = 1;
}

// The response message containing the greetings
message Status {
  string status = 1;
}


message Status2 {
  string responseType = 1;
  string message = 2;
}